--- a/cssstyle.css
+++ b/cssstyle.css
@@ -291,6 +291,7 @@ details.description[open] summary::after {
 details.description:not([open]) summary::after {
   content: attr(data-close);
 }
+.publink:hover{opacity:0.6;}
 
 /* <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
  */
