--- a/cssstyle.css
+++ b/cssstyle.css
@@ -296,3 +296,19 @@ details.description:not([open]) summary::after {
 /* <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
  */
  
+.click-zoom input[type=checkbox] {
+  display: none
+}
+
+.click-zoom img {
+  margin: 0px;
+  transition: transform 0.25s ease;
+  transform-origin: 100% 0;
+  cursor: zoom-in
+}
+
+.click-zoom input[type=checkbox]:checked~img {
+  transform: scale(3);
+/*	width:90%;*/
+  cursor: zoom-out
+}
