--- a/cssstyle.css
+++ b/cssstyle.css
@@ -264,6 +264,60 @@
 }
 /*bouncing publication*/
 
+/*bouncing inpress*/.iPsign1, .iPsign2, .iPsign3, .iPsign4, .iPsign5, .iPsign6, .iPsign7, .iPsign8, .iPsign9 {
+  position: relative;
+  color: #6ef599;
+  text-shadow: 0 1px #1d753e, 0 2px #1d753e, 0 3px #1d753e;
+}
+.iPsign0 {
+  position: relative;font-size:0%;}
+.iPsign1 {
+	  z-index:1;
+  animation: bounce 1s ease infinite;
+  -webkit-animation: bounce 1s ease infinite;
+}
+.iPsign2 {
+	  z-index:1;
+  animation: bounce 1s ease infinite .05s;
+  -webkit-animation: bounce 1s ease infinite .05s;
+}
+.iPsign3 {
+	  z-index:1;
+  animation: bounce 1s ease infinite .1s;
+  -webkit-animation: bounce 1s ease infinite .1s;
+}
+.iPsign4 {
+	  z-index:1;
+  animation: bounce 1s ease infinite .15s;
+  -webkit-animation: bounce 1s ease infinite .15s;
+}
+.iPsign5 {
+	  z-index:1;
+  animation: bounce 1s ease infinite .2s;
+  -webkit-animation: bounce 1s ease infinite .2s;
+}
+.iPsign6 {
+	  z-index:1;
+  animation: bounce 1s ease infinite .25s;
+  -webkit-animation: bounce 1s ease infinite .25s;
+}
+.iPsign7 {
+	  z-index:1;
+  animation: bounce 1s ease infinite .3s;
+  -webkit-animation: bounce 1s ease infinite .3s;
+}
+.iPsign8 {
+	  z-index:1;
+  animation: bounce 1s ease infinite .35s;
+  -webkit-animation: bounce 1s ease infinite .35s;
+}
+.iPsign9 {
+	  z-index:1;
+  animation: bounce 1s ease infinite .4s;
+  -webkit-animation: bounce 1s ease infinite .4s;
+}
+/*bouncing in press*/
+
  @keyframes bounce {
         0%   { transform: scale(1,1) translateY(0); }
         10%  { transform: scale(1.1,.9) translateY(0); }
